[gd_scene load_steps=19 format=3 uid="uid://dibxd4eisny6n"]

[ext_resource type="Script" uid="uid://b2m7okrcax3rl" path="res://Scripts/end_screen.gd" id="1_3gukv"]
[ext_resource type="Texture2D" uid="uid://br5h2twvhtxcg" path="res://Assets/Backgrounds/EndScreenBG.png" id="2_d234m"]
[ext_resource type="FontFile" uid="uid://dalj3asj0d324" path="res://Assets/fonts/PixelOperator8-Bold.ttf" id="3_jh5rx"]
[ext_resource type="FontFile" uid="uid://0fn4even71bp" path="res://Assets/fonts/PixelOperator8.ttf" id="4_d234m"]
[ext_resource type="Texture2D" uid="uid://dmhgow7pjjw65" path="res://Assets/sprites/red_coin.png" id="6_tslor"]

[sub_resource type="AtlasTexture" id="AtlasTexture_opiyw"]
atlas = ExtResource("6_tslor")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e0drb"]
atlas = ExtResource("6_tslor")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdntk"]
atlas = ExtResource("6_tslor")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_eilhd"]
atlas = ExtResource("6_tslor")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fddmx"]
atlas = ExtResource("6_tslor")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8q17y"]
atlas = ExtResource("6_tslor")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1tl2"]
atlas = ExtResource("6_tslor")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8goh1"]
atlas = ExtResource("6_tslor")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l4cno"]
atlas = ExtResource("6_tslor")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fj7p4"]
atlas = ExtResource("6_tslor")
region = Rect2(144, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fd4ui"]
atlas = ExtResource("6_tslor")
region = Rect2(160, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_le58t"]
atlas = ExtResource("6_tslor")
region = Rect2(176, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_jd3tx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_opiyw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e0drb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdntk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eilhd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fddmx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8q17y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1tl2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8goh1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l4cno")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fj7p4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fd4ui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_le58t")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="EndScreen" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_3gukv")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(640, 360)
texture = ExtResource("2_d234m")

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 486.0
offset_top = 38.0
offset_right = 794.0
offset_bottom = 320.0
theme_override_colors/font_color = Color(0, 0, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_jh5rx")
theme_override_font_sizes/font_size = 32
text = "You shouldn't see this text"
horizontal_alignment = 1
autowrap_mode = 3

[node name="MenuContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 562.0
offset_top = 351.0
offset_right = 731.0
offset_bottom = 559.0

[node name="RedCoinContainer" type="HBoxContainer" parent="MenuContainer"]
layout_mode = 2

[node name="RedCount" type="Label" parent="MenuContainer/RedCoinContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_d234m")

[node name="Label" type="Label" parent="MenuContainer/RedCoinContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_d234m")
text = "/"

[node name="RedTotal" type="Label" parent="MenuContainer/RedCoinContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_d234m")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="MenuContainer/RedCoinContainer"]
position = Vector2(153, 4)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_jd3tx")

[node name="RestartButton" type="Button" parent="MenuContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_d234m")
text = "Restart"

[node name="MainMenuButton" type="Button" parent="MenuContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_d234m")
text = "Main Menu"

[node name="CreditsButton" type="Button" parent="MenuContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_d234m")
text = "Credits"

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="pressed" from="MenuContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="MenuContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="MenuContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
